testsuite/tests/th/TH_dataD1.stderr

TH_dataD1.hs:7:6: error: [GHC-65904]
    Splices within declaration brackets not (yet) handled by Template Haskell
